# gdal-pdfium

./: .gitignore  README.md  make.py  requirements.txt
.github/workflows/: android.yml  ios.yml
cmake/: CMakeLists.txt
conan/: conandata.yml  conanfile.py
conan/gdal/: conanfile.py
conan/gdal/patches/3.3.x/: fix-nmake.patch
conan/patches/3.3.x/: fix-autotools.patch  fix-gdal-make.patch
conan/project/: conanfile.py  conanfile.txt
conan/test/: conanfile.py
modules/: config.py  deps.py  net.py  pack.py  util.py
modules/tasks/: android.py  common.py  ios.py
profile/: ios-profile
